--- a/src/App.css
+++ b/src/App.css
@@ -24,4 +24,6 @@
 .HeroSection{
   background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://www.cypressgreen.in/blog/wp-content/uploads/2021/03/food-1024x683.jpg);
   backdrop-filter: blur;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
